--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-1  flask==2.3.3
-2  gunicorn==21.2.0
-3  flask-cors==4.0.0
-4  python-dotenv==1.0.0
-5  flask-login==0.6.3   ← Add this line
+flask==2.3.3
+gunicorn==21.2.0
+flask-cors==4.0.0
+python-dotenv==1.0.0
+flask-login==0.6.3
