--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ gunicorn==21.2.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
 flask-login==0.6.3
-flask-sqlalchemy==3.1.1  ← Add this
+flask-sqlalchemy==3.1.1   
